// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navbar dark background should match snapshot 1`] = `
<nav
  className="navbar navbar_dark"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Logo
    background="dark"
  />
  <div
    className="navbar__link-container"
  >
    <Tasks
      smallScreen={false}
      tasks={Array []}
    />
    <Links
      links={
        Array [
          Object {
            "route": "/analysis",
            "text": "analysis",
          },
          Object {
            "route": "/help",
            "text": "help",
          },
        ]
      }
      smallScreen={false}
    />
  </div>
</nav>
`;

exports[`navbar semi-transparent background should match snapshot 1`] = `
<nav
  className="navbar navbar_semi-transparent"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Logo
    background="semi"
  />
  <div
    className="navbar__link-container"
  >
    <Tasks
      smallScreen={false}
      tasks={Array []}
    />
    <Links
      links={
        Array [
          Object {
            "route": "/analysis",
            "text": "analysis",
          },
          Object {
            "route": "/help",
            "text": "help",
          },
        ]
      }
      smallScreen={false}
    />
  </div>
</nav>
`;

exports[`navbar transparent background should match snapshot 1`] = `
<nav
  className="navbar navbar_transparent"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Logo
    background="transparent"
  />
  <div
    className="navbar__link-container"
  >
    <Tasks
      smallScreen={false}
      tasks={Array []}
    />
    <Links
      links={
        Array [
          Object {
            "route": "/analysis",
            "text": "analysis",
          },
          Object {
            "route": "/help",
            "text": "help",
          },
        ]
      }
      smallScreen={false}
    />
  </div>
</nav>
`;
